--- a/ms/heap.bib
+++ b/ms/heap.bib
@@ -194,3 +194,42 @@ doi = {10.1119/1.12592}
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{PhysRevA.80.040902,
+  title = {Noninvasive electron microscopy with interaction-free quantum measurements},
+  author = {Putnam, William P. and Yanik, Mehmet Fatih},
+  journal = {Phys. Rev. A},
+  volume = {80},
+  issue = {4},
+  pages = {040902},
+  numpages = {4},
+  year = {2009},
+  month = {Oct},
+  doi = {10.1103/PhysRevA.80.040902},
+  url = {http://link.aps.org/doi/10.1103/PhysRevA.80.040902},
+  publisher = {American Physical Society}
+}
+
+@article{PhysRevA.41.2295,
+  title = {Quantum Zeno effect},
+  author = {Itano, Wayne M. and Heinzen, D. J. and Bollinger, J. J. and Wineland, D. J.},
+  journal = {Phys. Rev. A},
+  volume = {41},
+  issue = {5},
+  pages = {2295--2300},
+  year = {1990},
+  month = {Mar},
+  doi = {10.1103/PhysRevA.41.2295},
+  url = {http://link.aps.org/doi/10.1103/PhysRevA.41.2295},
+  publisher = {American Physical Society}
+}
+
+@book{orzel2009teach,
+  title={How to Teach Physics to Your Dog},
+  author={Orzel, C.},
+  isbn={9781416572282},
+  lccn={2009021073},
+  url={http://books.google.ch/books?id=rXUoDykH3ZwC},
+  year={2009},
+  publisher={Scribner}
+}
+
