--- a/ms/ms.tex
+++ b/ms/ms.tex
@@ -76,40 +76,6 @@ usage of similar
 terminalogy\cite{springerlink:10.1007/BF01327019,dicke:925} refers to
 a situation where a non-detection enables an inference.)
 
-
-It can be readily understood through a thought experiment, as follows.
-Consider a single photon, which can be in an arbitrary superposition
-of two states, say $\ket0$ and $\ket1$.  We are also given a glass
-sheet, which can be one of two kinds: clear or dark.  A clear glass
-let all photons through, whereas the dark variety lets only $\ket0$
-photons through, and absorbs $\ket1$ photons.  We wish to test what
-kind of glass we have been given, and do the following experiment.
-\begin{itemize}
-\item Start with the photon in state $\ket0$.
-\item Repeat the following $N$ times.
-\begin{itemize}
-\item Rotate the state of the photon away from $\ket0$ towards $\ket1$
-  by one part in $N$.
-\item Send the photon through the glass.  If the glass is clear,
-  nothing happens.  If the glass is dark, it measures the state
-  of the photon as either $\ket0$ or $\ket1$, and
-\begin{itemize}
-\item {\em either\/} the photon comes through, in eigenstate $\ket0$,
-\item {\em or\/} the photon is absorbed, and the experiment aborts.
-\end{itemize}
-\end{itemize}
-\item If the photon has not been absorbed, measure its state.
-\end{itemize}
-\noindent If the final measurement results in $\ket1$.  If the glass
-was dark, the state must be $\ket0$.  If $N=1$, the glass receives a
-photon in the state $\frac1{sqrt2}\left(\ket0+\ket1\right)$.  A dark
-glass then has a 50\% probability of absorbing the photon.  In this
-case, we have inferred the presence of a photon absorber without it
-having absorbed any photons.  
-
-With no absorber, the state oscillates between $\ket0$ and $\ket1$,
-whereas with absorption of $\ket1$ the state stays in $\ket0$.
-
 In this paper, we relate the above simple picture on the one hand to
 the standard description of interaction-free measurement in terms of
 an interferometric setup, and on the other hand to a classical system
@@ -318,6 +284,231 @@ resistance reduces dissipation.
 \caption{\label{fig:absorb} Schematic represenation of a Mach-Zehnder
   interferometer with an absorber in one arm.}
 \end{figure}
+
+
+\def\pgfbeamsplitter(#1,#2)#3{\pgfputat{\pgfxy(#1,#2)}
+                              {\pgfbox[center,center]#3
+                               \pgfxyline(-1.1,0)(0,1.1)
+                               \pgfxyline(0,1.1)(1.1,0)
+                               \pgfxyline(1.1,0)(0,-1.1)
+                               \pgfxyline(0,-1.1)(-1.1,0)}}
+
+\def\semireflecting{$\hbox{beam}\atop\hbox{splitter}$}
+\def\arbireflecting{$e^{i\alpha\X}$}
+\def\nearlytransparent{$e^{i\left(\frac\pi2-\epsilon\right)\X}$}
+
+\def\pgfsimpmirror(#1,#2){\pgfputat{\pgfxy(#1,#2)}
+                      {\pgfbox[center,center]{M}
+                      \pgfxyline(-.4,-.4)(.4,-.4)
+                      \pgfxyline(.4,-.4)(.4,.4)
+                      \pgfxyline(.4,.4)(-.4,.4)
+                      \pgfxyline(-.4,.4)(-.4,-.4)}}
+
+\def\pgfmirror(#1,#2){\pgfputat{\pgfxy(#1,#2)}
+                      {\pgfbox[center,center]{$i\X$}
+                      \pgfxyline(-.4,-.4)(.4,-.4)
+                      \pgfxyline(.4,-.4)(.4,.4)
+                      \pgfxyline(.4,.4)(-.4,.4)
+                      \pgfxyline(-.4,.4)(-.4,-.4)}}
+
+\def\pgfabsorber(#1,#2){\pgfputat{\pgfxy(#1,#2)}
+                      {\pgfbox[center,center]{$\zero$}
+                      \pgfxyline(-.4,-.4)(.4,-.4)
+                      \pgfxyline(.4,-.4)(.4,.4)
+                      \pgfxyline(.4,.4)(-.4,.4)
+                      \pgfxyline(-.4,.4)(-.4,-.4)}}
+
+\begin{figure}
+\begin{center}
+\vmargin
+
+\begin{pgfpicture}
+\pgfbeamsplitter(0,0)\semireflecting
+\pgfsimpmirror(2,2) % 1-3,6
+% \pgfabsorber(2,2) % 4,5
+\pgfsimpmirror(2,-2)
+\pgfbeamsplitter(4,0)\semireflecting
+\pgfsetendarrow{\pgfarrowsingle}
+\pgfxyline(-1.5,-1.5)(-.7,-.7) % 1,3-
+% \pgfxyline(-1.5, 1.5)(-.7, .7) % 2
+\pgfxyline(.7,.7)(1.5,1.5)
+\pgfxyline(.7,-.7)(1.5,-1.5)
+\pgfxyline(2.5,1.5)(3.3,.7) % 1-3,6
+\pgfxyline(2.5,-1.5)(3.3,-.7)
+\pgfxyline(4.7,.7)(5.5,1.5) % 1,3-
+% \pgfxyline(4.7,-.7)(5.5,-1.5) % 2,4-5
+\end{pgfpicture}
+
+\vmargin\vmargin\vmargin
+
+\begin{pgfpicture}
+\pgfbeamsplitter(0,0)\semireflecting
+\pgfsimpmirror(2,2) % 1-3,6
+% \pgfabsorber(2,2) % 4,5
+\pgfsimpmirror(2,-2)
+\pgfbeamsplitter(4,0)\semireflecting
+\pgfsetendarrow{\pgfarrowsingle}
+% \pgfxyline(-1.5,-1.5)(-.7,-.7) % 1,3-
+\pgfxyline(-1.5, 1.5)(-.7, .7) % 2
+\pgfxyline(.7,.7)(1.5,1.5)
+\pgfxyline(.7,-.7)(1.5,-1.5)
+\pgfxyline(2.5,1.5)(3.3,.7) % 1-3,6
+\pgfxyline(2.5,-1.5)(3.3,-.7)
+% \pgfxyline(4.7,.7)(5.5,1.5) % 1,3-
+\pgfxyline(4.7,-.7)(5.5,-1.5) % 2,4-5
+\end{pgfpicture}
+
+\vmargin\vmargin\vmargin
+
+\begin{pgfpicture}
+\pgfbeamsplitter(0,0)\semireflecting
+% \pgfsimpmirror(2,2) % 1-3,6
+\pgfabsorber(2,2) % 4,5
+\pgfsimpmirror(2,-2)
+\pgfbeamsplitter(4,0)\semireflecting
+\pgfsetendarrow{\pgfarrowsingle}
+\pgfxyline(-1.5,-1.5)(-.7,-.7) % 1,3-
+% \pgfxyline(-1.5, 1.5)(-.7, .7) % 2
+\pgfxyline(.7,.7)(1.5,1.5)
+\pgfxyline(.7,-.7)(1.5,-1.5)
+% \pgfxyline(2.5,1.5)(3.3,.7) % 1-3,6
+\pgfxyline(2.5,-1.5)(3.3,-.7)
+\pgfxyline(4.7,.7)(5.5,1.5) % 1,3-
+\pgfxyline(4.7,-.7)(5.5,-1.5) % 2,4-5
+\end{pgfpicture}
+
+\end{center}
+\caption{\label{fig:mach-zehnder}}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\vmargin
+
+\begin{pgfpicture}
+\pgfbeamsplitter(0,0)\nearlytransparent % 2-
+\pgfmirror(2,2) % 1-4
+% \pgfabsorber(2,2) % 5
+\pgfmirror(2,-2)
+\pgfbeamsplitter(4,0)\nearlytransparent % 2-
+\pgfsetendarrow{\pgfarrowsingle}
+\pgfxyline(-1.5,-1.5)(-.7,-.7) % 1-2,4-
+% \pgfxyline(-1.5, 1.5)(-.7, .7) % 3
+\pgfxyline(.7,.7)(1.5,1.5)
+\pgfxyline(.7,-.7)(1.5,-1.5)
+\pgfxyline(2.5,1.5)(3.3,.7) % 1-4
+\pgfxyline(2.5,-1.5)(3.3,-.7)
+\pgfxyline(4.7,.7)(5.5,1.5)
+\pgfxyline(4.7,-.7)(5.5,-1.5)
+\pgfputat{\pgfxy(-1.7,-1.7)}{\pgfbox[right,center]{$\ket0$}} % 1-2,4-
+% \pgfputat{\pgfxy(-1.7, 1.7)}{\pgfbox[right,center]{$\ket1$}} % 3
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-\cos2\alpha\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-i\sin2\alpha\;\ket1$}}}
+\pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+         {$-\sin2\epsilon\;\ket0$}}
+         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+         {$-i\cos2\epsilon\;\ket1$}}
+% <2,4>
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-i\cos2\epsilon\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-\sin2\epsilon\;\ket1$}}}
+% <3>
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-\frac 12\sin2\epsilon\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-i\cos^2\epsilon\;\ket1$}}}
+% <5>
+\end{pgfpicture}
+
+\vmargin\vmargin\vmargin
+
+\begin{pgfpicture}
+\pgfbeamsplitter(0,0)\nearlytransparent % 2-
+\pgfmirror(2,2) % 1-4
+% \pgfabsorber(2,2) % 5
+\pgfmirror(2,-2)
+\pgfbeamsplitter(4,0)\nearlytransparent % 2-
+\pgfsetendarrow{\pgfarrowsingle}
+% \pgfxyline(-1.5,-1.5)(-.7,-.7) % 1-2,4-
+\pgfxyline(-1.5, 1.5)(-.7, .7) % 3
+\pgfxyline(.7,.7)(1.5,1.5)
+\pgfxyline(.7,-.7)(1.5,-1.5)
+\pgfxyline(2.5,1.5)(3.3,.7) % 1-4
+\pgfxyline(2.5,-1.5)(3.3,-.7)
+\pgfxyline(4.7,.7)(5.5,1.5)
+\pgfxyline(4.7,-.7)(5.5,-1.5)
+% \pgfputat{\pgfxy(-1.7,-1.7)}{\pgfbox[right,center]{$\ket0$}} % 1-2,4-
+\pgfputat{\pgfxy(-1.7, 1.7)}{\pgfbox[right,center]{$\ket1$}} % 3
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-\cos2\alpha\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-i\sin2\alpha\;\ket1$}}}
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-\sin2\epsilon\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-i\cos2\epsilon\;\ket1$}}}
+% <2,4>
+\pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+         {$-i\cos2\epsilon\;\ket0$}}
+          \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+         {$-\sin2\epsilon\;\ket1$}}
+% <3>
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-\frac 12\sin2\epsilon\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-i\cos^2\epsilon\;\ket1$}}}
+% <5>
+\end{pgfpicture}
+
+\vmargin\vmargin\vmargin
+
+\begin{pgfpicture}
+\pgfbeamsplitter(0,0)\nearlytransparent % 2-
+% \pgfmirror(2,2) % 1-4
+\pgfabsorber(2,2) % 5
+\pgfmirror(2,-2)
+\pgfbeamsplitter(4,0)\nearlytransparent % 2-
+\pgfsetendarrow{\pgfarrowsingle}
+\pgfxyline(-1.5,-1.5)(-.7,-.7) % 1-2,4-
+% \pgfxyline(-1.5, 1.5)(-.7, .7) % 3
+\pgfxyline(.7,.7)(1.5,1.5)
+\pgfxyline(.7,-.7)(1.5,-1.5)
+% \pgfxyline(2.5,1.5)(3.3,.7) % 1-4
+\pgfxyline(2.5,-1.5)(3.3,-.7)
+\pgfxyline(4.7,.7)(5.5,1.5)
+\pgfxyline(4.7,-.7)(5.5,-1.5)
+\pgfputat{\pgfxy(-1.7,-1.7)}{\pgfbox[right,center]{$\ket0$}} % 1-2,4-
+% \pgfputat{\pgfxy(-1.7, 1.7)}{\pgfbox[right,center]{$\ket1$}} % 3
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-\cos2\alpha\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-i\sin2\alpha\;\ket1$}}}
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-\sin2\epsilon\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-i\cos2\epsilon\;\ket1$}}}
+% <2,4>
+% \pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+%         {$-i\cos2\epsilon\;\ket0$}}
+%         \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+%         {$-\sin2\epsilon\;\ket1$}}}
+% <3>
+\pgfputat{\pgfxy(5.7, 1.7)}{\pgfbox[left,center]
+         {$-\frac 12\sin2\epsilon\;\ket0$}}
+          \pgfputat{\pgfxy(5.7,-1.7)}{\pgfbox[left,center]
+         {$-i\cos^2\epsilon\;\ket1$}}
+% <5>
+\end{pgfpicture}
+
+
+\end{center}
+\caption{\label{fig:qubits}}
+\end{figure}
+
+
 
 \end{document}
 
