--- a/ms/ms.tex
+++ b/ms/ms.tex
@@ -33,7 +33,7 @@ measurement.
 
 \maketitle
 
-\section{Interaction-free measurement}
+\section{Introduction}
 
 Many quantum paradoxes have been explored theoretically and
 experimentally in recent years.  Most involve entangled states: the
@@ -82,7 +82,7 @@ the standard description of interaction-free measurement in terms of
 an interferometric setup, and on the other hand to a classical system
 of coupled oscillators.
 
-\section{Interferometric picture}
+\section{Quantum formulation}
 
 Most discussion in the literature is in terms of a Mach-Zehnder
 interferometer.  With the help of Figure~{\ref{fig:mz}} we can relate
@@ -136,7 +136,7 @@ Comes out to
        \end{array} \right)
 \end{equation}
 
-\section{Coupled oscillators}
+\section{A classical analogy}
 
 Consider two coupled oscillators, one of them damped.
 \begin{equation}
