further small edits

--- a/ms/ms.tex
+++ b/ms/ms.tex
@@ -148,7 +148,8 @@ Working out the algebra gives
                          i            & \tan\epsilon 
        \end{array} \right)
 \end{equation}
-If $\epsilon$ is small, this changes $\ket0$ to $\ket1$.
+If $\epsilon$ is small (very slightly transmissive) this operator
+changes $\ket0$ to $\ket1$.
 
 \section{A classical analogy}
 
