--- a/ms/ms.tex
+++ b/ms/ms.tex
@@ -123,9 +123,9 @@ which simplifies to
 \begin{equation}
      -(\sin2\epsilon + i\cos2\epsilon\,\X) \,.
 \end{equation}
-A cascade with beam-splitter followed by mirror $N$ times is
+A cascade with beam-splitter followed by mirror $N-1$ times is
 \begin{equation}
-     \left[ (\sin\epsilon + i\cos\epsilon\,\X) \; i\X \right]^N \;
+     \left[ (\sin\epsilon + i\cos\epsilon\,\X) \; i\X \right]^{N-1} \;
      (\sin\epsilon + i\cos\epsilon\,\X)
 \end{equation}
 which simplifies to
@@ -136,7 +136,7 @@ If $N\epsilon=\pi/2$ this is identity, apart from a phase factor.
 
 Now put an absorber in one of the arms.  Then we will have
 \begin{equation}
-     \left[ (\sin\epsilon + i\cos\epsilon\,\X) \; i\A \right]^N \;
+     \left[ (\sin\epsilon + i\cos\epsilon\,\X) \; i\A \right]^{N-1} \;
      (\sin\epsilon + i\cos\epsilon\,\X)
   \qquad
   \A \equiv \left( \begin{array}{cc} 0 & 1 \\ 0 & 0 \end{array} \right)
