--- a/ms/ifm.tex
+++ b/ms/ifm.tex
@@ -11,8 +11,7 @@
 
 \author{Prasenjit Saha}
 \email{psaha@physik.uzh.ch}
-\affiliation{Institute for Theoretical Physics, University of Zurich,
-  Switzerland}
+\affiliation{Physik-Institut, University of Zurich, Switzerland}
 \author{Nick Kaiser}
 \email{kaiser@hawaii.edu}
 \affiliation{Institute for Astronomy, University of Hawaii at Manoa,
@@ -203,7 +202,7 @@ damping means less energy dissipation.  In the electrical case (an LC
 circuit coupled to an RLC circuit) it is obvious that increasing
 resistance reduces dissipation.
 
-\bibliography{heap.bib}
+\bibliography{ifm.bib}
 
 \newpage
 
@@ -300,7 +299,7 @@ resistance reduces dissipation.
   into one arm emerges parallel to the original direction.  This is
   seen in the upper and middle diagrams.  In the lower diagram, one of
   the mirrors is replaced by an absorber, and as a result, photons can
-  emerge parallel to their original direction.  Such photons
+  emerge perpendicular to their original direction.  Such photons
   effectively detect the absorber without getting absorbed.}
 \end{figure}
 
